test_final.log
[CREADER] load_wasm_proc_macros called with 1 entries
[CREADER] Loading WASM proc macro: Demo from "watt_demo_with_metadata.wasm"
[CREADER] Read 503343 bytes from watt_demo_with_metadata.wasm
[CREADER DEBUG] create_wasm_proc_macros called
[CREADER DEBUG] Extracting proc macro metadata from WASM...
[CREADER DEBUG] Found 1 metadata entries
[CREADER] Extracted 1 proc macros from WASM file
[RESOLVER] Registering 1 WASM proc macros
[RESOLVER] Registering WASM proc macro: Demo
[RESOLVER] Using crate root DefId DefId(0:0 ~ test_watt_demo[bab8]) for WASM proc macro Demo
[RESOLVER] Found WASM proc macro: Demo
[RESOLVER] Using crate root DefId DefId(0:0 ~ test_watt_demo[bab8]) for WASM proc macro Demo
[RESOLVER] Found WASM proc macro: Demo
[RESOLVER] Using crate root DefId DefId(0:0 ~ test_watt_demo[bab8]) for WASM proc macro Demo
error[E0599]: no associated item named `MESSAGE` found for struct `MyStruct` in the current scope
 --> test_watt_demo.rs:5:30
  |
2 | struct MyStruct;
  | --------------- associated item `MESSAGE` not found for this struct
...
5 |     println!("{}", MyStruct::MESSAGE);
  |                              ^^^^^^^ associated item not found in `MyStruct`

error: cannot determine resolution for the derive macro `Demo`
 --> test_watt_demo.rs:1:10
  |
1 | #[derive(Demo)]
  |          ^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
Error: error while executing at wasm backtrace:
    0: 0x393461b - <unknown>!<wasm function 166102>
    1: 0x39325e3 - <unknown>!<wasm function 166055>
    2: 0x392e39e - <unknown>!<wasm function 165956>
    3: 0x392e35f - <unknown>!<wasm function 165955>
    4: 0x38e429c - <unknown>!<wasm function 164573>
    5: 0x36d9e70 - <unknown>!<wasm function 159001>
    6: 0x5242b - <unknown>!<wasm function 128>
    7: 0x4803a - <unknown>!<wasm function 52>
    8: 0x47f7b - <unknown>!<wasm function 51>
    9: 0x71ef9 - <unknown>!<wasm function 573>
   10: 0x7bd42 - <unknown>!<wasm function 669>
   11: 0x3924968 - <unknown>!<wasm function 165751>
   12: 0x3933fbc - <unknown>!<wasm function 166088>
   13: 0x3950e39 - <unknown>!<wasm function 166465>
   14: 0x39522eb - <unknown>!<wasm function 166495>

Caused by:
    wasm trap: wasm `unreachable` instruction executed
